[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"
[dependencies]
actix-web = "*"
chrono = "*"
config = "0.11"
serde-aux = "3"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.secrecy]
features = ["serde"]
version = "0.8.0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
version = "0.5.7"

[dependencies.tokio]
features = ["rt-multi-thread", "macros"]
version = "*"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["registry", "env-filter"]
version = "0.3"

[dependencies.uuid]
features = ["v4"]
version = "*"

[dev-dependencies]
once_cell = "1"
reqwest = "*"

[target]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
