[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[dependencies]
actix-web = "*"
chrono = "*"
config = "0.11"
serde-aux = "3"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
sqlx = { version = "0.5.7", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "*", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
htmlescape = "0.3"
urlencoding = "2"
argon2 = { version = "0.3", features = ["std"] }
base64 = "0.13.0"

[dev-dependencies]
once_cell = "1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"

[target]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
